--- a/assets/SASS/main.scss
+++ b/assets/SASS/main.scss
@@ -4,8 +4,8 @@
 @import "home1";
 @import "course";
 @import "wordpress";
-//@import "enrollPage";
 @import "enrollPage";
 @import "enrollPageOne";
 @import "wordpressMeetup";
 @import "hybridAppsPage";
+@import "agularPage";
