--- a/assets/SASS/_style.scss
+++ b/assets/SASS/_style.scss
@@ -97,9 +97,11 @@
 
   }
 }
-
 .about-background-image{
   background-image: url("../images/about-academy-bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
   .second-div{
     width: 100%;
     padding: 60px;
@@ -144,7 +146,6 @@
     }
   }
 }
-
 .inline-block-elem {
   display: inline-block;
   vertical-align: middle;
@@ -153,7 +154,7 @@
 .third-div {
   height: 150px;
   width:100%;
-  font-family: "Raleway SemiBold",sans-serif;
+  font-family: 'Raleway',sans-serif;
   font-size:18px;
   text-align: center;
   display: table;
@@ -194,7 +195,6 @@
     font-family: "Raleway SemiBold",sans-serif;
   }
 }
-
 .fourth-div {
   text-align: center;
   background: url("../images/white-bg.png") no-repeat;
@@ -249,7 +249,6 @@
     }
   }
 }
-
 .fifth-div {
   background: url("../images/background5.png") no-repeat;
   background-attachment: fixed;
@@ -333,11 +332,9 @@
     }
   }
 }
-
 .map {
   position: relative;
 }
-
 .form-transformation {
   padding: 20px;
   position: absolute;
@@ -387,7 +384,6 @@
   }
 
 }
-
 .details {
   width:100%;
   //height: 170px;
@@ -411,7 +407,6 @@
     margin: 15px 0 0 0;
   }
 }
-
 .last-div {
   font-family: $font-style;
   width: 100%;
@@ -499,8 +494,6 @@
     }
   }
 }
-
-
 .footer {
   background-color: #043450;
   //padding: 15px 0;
@@ -510,15 +503,13 @@
     font-size: 16px;
   }
 }
-
-
 ////////////////
 
-////////////////// MEDIA QUERY /////////////////
+//////////////// MEDIA QUERY /////////////////
 
 /////////////////////////////////
 
-//////////// md
+/////////// md
 @media (min-width: 992px) and (max-width: 1199px) {
   .first-bg {
     .app-bakerz-logo{
@@ -556,7 +547,7 @@
 }
 
 ////////// xs
-@media (min-width: 320px) and (max-width: 767px) {
+@media (min-width: 320px) and (max-width: 767px){
   .header-bg{
     height: auto !important;
     padding-bottom: 40px;
